# GAMES101

./: .gitignore  CMakeLists.txt  README.md  main.cpp  out
Assignment1/: CMakeLists.txt  Triangle.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
Assignment2/: CMakeLists.txt  main.cpp  rasterizer.cpp  rasterizer.hpp
Assignment3/: CMakeLists.txt  OBJ_Loader.h  Texture.hpp  Triangle.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
Assignment4/: CMakeLists.txt  main.cpp
Assignment5/: CMakeLists.txt  Renderer.cpp  Triangle.hpp
opencv/: OpenCVConfig.cmake  setup_vars_opencv4.cmd
opencv/include/opencv2/: cvconfig.h
opencv/x64/mingw/lib/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
work0/: CMakeLists.txt  main.cpp
